--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 This is the page to my first website.  
 <br>
-<img src = "./images/meandneens.png" alt+"photo of Some Old Man" >
+<img src = "./images/MeAndNeens.png" alt+"photo of Some Old Man" >
 <br>
 Click <a href="page2.html"> here</a> for page 2. 
 
