--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
 <body>
 <br>
 <br>
-<img src = "./images/Old.png" alt+"photo of Some Old Man" >
+<img src = "images/Old.png" alt+"photo of Some Old Man" >
 <br>
 <br>
 Click <a href="index.html"> here</a> for the home page. 
